css/style.css
/*
 * 	<!-- Alan Qiu
 Mark Stamnes
 HCDE 437 Sprint 2014
 University of Washington -->
 <!-- Credits: www.templatemo.com, jquery.js, bootstrap.js, syickUp.js -->
 */

body, html {
	overflow-x: hidden;
}

body {
	background-color: #ffffff;
	font-family: 'Open Sans', Arial, Helvetice Neue, sans-serif;
	font-size: 12px;
	font-weight: 300;
	font-style: normal;
}

h1, h2, h3, h4, h5, h6, span, p {
	font-family: 'Open Sans', Arial, Helvetice Neue, sans-serif;
}

* {
	border-radius: 0 !important;
	-moz-border-radius: 0 !important;
	border-radius: 0 !important;
}

.top-bar {
	min-height: 50px;
	background-color: #ffffff;
}

.top-menu {
	min-height: 50px;
	background-color: #ffffff;
	z-index: 5000;
	width: 100%;
}

.fixed-menu {
	position: fixed;
	top: 0px;
}

.top-menu .navbar-toggle {
	margin-top: 50px;
}

.top-menu .navbar-brand {
	padding: 3px;
	margin: 0px 0 0 0;
}

.navbar-header {
	height: 138px;
}

.socialmedia {
	position: fixed;
	top: 150px;
	right: 0;
	list-style-type: none;
}

.socialmedia li {
	padding: 2.5px;
}

/* ------ aboutus & Slogan ------ */
.aboutus {
	margin-top: 130px;
	border-bottom: 1px solid #cccccc;
	min-height: 230px;
}

.slogan {
	font-family: 'Open Sans', sans-serif;
	font-weight: normal;
	font-size: 42px;
	margin: 60px 0;
	color: #333333;
}

.service-item {
	font-family: 'Open Sans', sans-serif;
	margin-bottom: 10px;
	font-size: 24px;
}

.service-item p {
	font-weight: lighter;
	text-align: justify;
	margin-top: 25px;
	font-size: 14px;
	color: #929292;
}

.btn-orange {
	background-color: #ff7600;
	border-bottom: 2px solid #d35400;
	border-radius: 0;
	-moz-border-radius: 0;
	border-radius: 0;
	color: #ffffff;
}

.btn-orange:hover, .btn-orange:focus, .btn-orange:active, .btn-orange.active, .open .dropdown-toggle.btn-orange {
	background-color: #d35400;
	color: #ffffff;
}

.nav > li > a {
	padding: 10px 20px;
}

.nav > li > a:hover, .nav > li > a:focus {
	background-color: #ff7600;
	color: #fff;
}

.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
	background-color: #ff7600;
	color: #fff;
}

.nav > li > a {
	color: #929292;
}
.navbar-default {
	background-color: #fff;
	border: none;
	box-shadow: 0 6px 6px -6px grey;
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
	background-color: #ff7600;
	color: #fff;
}

.navbar {
	margin-bottom: 0px;
}

.service-item-header {
	margin-left: -10px;
	padding: 16px 20px 20px;
	font-size: larger;
	font-weight: normal;
	display: inline-block;
}

.savs_hr {
	border: 1px solid #fff;
	width: 39.5%;
	float: left;
}

.savs_hr_left {
	margin-right: 20px;
	margin-left: 20px;
}

.savs_hr_right {
	margin-left: 30px;
}

.hr_gray {
	border: 1px solid #cccccc;
}

.project-box {
	background-size: cover;
	border-style: solid;
	border-width: 4px;
	border-color: #E67E22;
	position: relative;
	overflow: hidden;
	cursor: pointer;
	height: 200px;
	width: 200px;
}

.project-box:hover .project-overlay {
	transition: all 0.3s ease-in-out 0s;
	visibility: visible;
	opacity: 1;
}

.project-overlay {
	background: rgba(0,0,0,.75);
	border: 2px solid #ff7600;
	visibility: hidden;
	position: absolute;
	text-align: center;
	padding-top: 40px;
	color: #b3b3b3;
	height: 100%;
	width: 100%;
	opacity: 0;
	right: 0;
	top: 0;
}

.project-overlay hr {
	width: 70%;
}

.project-gallery li {
	margin: 15px;
	display: inline-block;
}

.txt_darkgrey {
	color: #333333;
}

.txt_orange {
	color: #e67e22;
}

.txt_slogan {
	font-size: 14px;
	color: #929292;
}

.line-header span {
	font-size: 18px;
	float: left;
	margin-top: 10px;
}

.span_rentals_sales {
	margin-bottom: 80px;
}

.rentals_sales_post {
	color: #333333;
	padding: 10px;
}

.rentals_sales_header {
	font-weight: bold;
	font-size: 16px;
}

.rentals_sales_text {
	text-align: justify;
	font-size: 14px;
	margin-top: 20px;
}

#contact {
	margin-top: 100px;
	border-top: 1px solid #cccccc;
	font-size: 14px;
}
.contact-map {
	margin-bottom: 15px;
	height: 378px;
}

.contact_right img {
	margin-right: 5px;
}

.contact_right form {
	padding-left: 15px;
	padding-right: 15px
}

.tweet_txt {
	border-left: 2px solid #ffffff;
	min-height: 160px;
}

.twitter_user {
	color: #FFFF33;
	font-size: 14px;
	float: right;
}

.footer {
	border-top: 2px solid #cccccc;
	margin-top: 100px;
}

.footer_container {
	margin-top: 0px;
	margin-bottom: 20px;
}

.footer_bottom_service {
	margin: auto;
	margin-bottom: 30px;
	font-size: 14px;
	color: #333333;
}

.social-icon-fb {
	background: url('../images/social-icon-fb.png') no-repeat;
	width: 42px;
	height: 42px;
	display: block;
}

a:hover .social-icon-fb {
	background: url('../images/social-icon-fb-over.png') no-repeat;
}

.social-icon-rss {
	background: url('../images/social-icon-rss.png') no-repeat;
	width: 42px;
	height: 42px;
	display: block;
}

a:hover .social-icon-rss {
	background: url('../images/social-icon-rss-over.png') no-repeat;
}

.social-icon-twitter {
	background: url('../images/social-icon-twitter.png') no-repeat;
	width: 42px;
	height: 42px;
	display: block;
}

a:hover .social-icon-twitter {
	background: url('../images/social-icon-twitter-over.png') no-repeat;
}

.social-icon-linkedin {
	background: url('../images/social-icon-linkedin.png') no-repeat;
	width: 42px;
	height: 42px;
	display: block;
}

a:hover .social-icon-linkedin {
	background: url('../images/social-icon-linkedin-over.png') no-repeat;
}

.social-icon-gplus {
	background: url('../images/social-icon-gplus.png') no-repeat;
	width: 42px;
	height: 42px;
	display: block;
}

a:hover .social-icon-gplus {
	background: url('../images/social-icon-gplus-over.png') no-repeat;
}

ul.project-gallery  li  a img:hover {
	border: 3px solid #ff7600;
}

.link_orange:hover {
	text-decoration: none;
}
.project-gallery {
	margin: 0 0 0 0;
	margin-top: 30px;
	margin-left: -40px;
	text-align: center;
}
.project-gallery li {
	list-style: none;
	margin-bottom: 25px;
}
.project-gallery li img {
	cursor: pointer;
}

.testimonials {
	background-color: #8996a0;
	min-height: 200px;
	font-family: 'Open Sans', sans-serif;
	font-size: 20px;
	color: #ffffff;
	margin-top: 100px;
}

.form-control {
	border-radius: 0;
	-moz-border-radius: 0;
	border-radius: 0;
	box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
	font-style: italic;
}

.rentals_sales_box {
	margin-left: 12px;
}

@media (min-width: 991px) and (max-width: 1200px) {
	.project-box, .project-overlay {
		height: 170px;
		width: 170px;
	}

	.project-gallery {
		margin-left: -70px;
	}

	.service-item-header {
		padding: 16px 10px 20px;
	}
}

@media (max-width: 991px) {

	.socialmedia {
		position: fixed;
		list-style: none;
		padding-left: 0;
	}
	.socialmedia li {
		display: inline-block;
	}
}

@media (min-width: 768px) and (max-width: 990px) {
	.project-box, .project-overlay {
		height: 130px;
		width: 130px;
		padding-top: 0px;
	}

	.project-gallery {
		margin-left: 10px;
	}

	.rentals_sales_box {
		margin-right: -140px;
	}
}

@media (min-width: 768px) {
	.navbar-nav > li > a {
		padding-top: 9px;
		padding-bottom: 9px;
	}
}

@media (max-width: 768px) {
}

@media (max-width: 380px) {
	.project-box, .project-overlay {
		height: 90px;
		width: 90px;
		padding-top: 0px;
	}
	.service-item-header {
		font-size: 16px;
		padding: 23px 10px 22px;
	}
}

@media (min-width: 991px) and (max-width: 1200px) {
	.savs_hr {
		width: 37%;
	}
}

@media (min-width: 683px) and (max-width: 991px) {
	.savs_hr {
		width: 33%;
	}
}

@media (min-width: 585px) and (max-width: 683px) {
	.savs_hr {
		width: 30%;
	}
}

@media (min-width: 536px) and (max-width: 585px) {
	.savs_hr {
		width: 28%;
	}
}

@media (min-width: 410px) and (max-width: 536px) {
	.savs_hr {
		width: 21%;
	}
}

@media (max-width: 410px) {
	.savs_hr {
		width: 11%;
	}
}

#nav-bar ul ul {
	display: none;
	position: absolute;
	width: 127px;
	list-style-type: none;
	background-color: white;
	margin: 0;
	padding: 0;
	left: 0px;
}

.nav li ul li a {
	color: #777;
}

#nav-bar ul li ul li {
	padding: 5px;
}

#nav-bar ul li:hover > a {
	text-decoration: none;
	color: #fff;
}

#nav-bar ul li:hover {
	background-color: #ff7600;
}

#nav-bar ul li:hover > ul {
	display: block;
}

#projectors, #lighting, #video, #audio, #staging, #gallery {
	margin-top: 100px;
}

@media (max-width: 768px) {
	#nav-bar ul li:hover > ul {
		display: none;
	}
	#nav-bar ul li span {
		display: none;
	}
}

